[package]
name = "devp2p"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.68"
thiserror = "1.0.38"
secp256k1 = "0.26.0"
rlp = "0.5.2"
aes = "0.8.2"
ethereum-types = "0.14.1"
generic-array = "0.14.6"
sha2 = "0.10.6"
sha3 = "0.10.6"
educe = { version = "0.4.20" }
